<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mortgage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="purchase_price">Purchase price</string>
    <string name="down_payment">Down payment</string>
    <string name="mortage_term">Mortgage term</string>
    <string name="interest_rate">Interest rate</string>
    <string name="property_tax">Property Tax</string>
    <string name="property_insurance">Property insurance</string>
    <string name="zip_code">Zip code</string>
    <string name="first_payment_date">First payment date</string>
    <string name="percentage">%</string>
    <string name="dollar_sign">$</string>
    <string name="years">years</string>
    <string name="dollar_sign_per_year">$ per year</string>
    <string name="clear">clear</string>
    <string name="submit">submit</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="total_pay">Total of 360 payment</string>
    <string name="pay_off_date">Payoff Date</string>
    <string name="back">Back</string>

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    
    <string-array name="year_array">
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
    </string-array>
</resources>