<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_payment" />

    <TextView
        android:id="@+id/monthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/payCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_pay" />

    <TextView
        android:id="@+id/totalPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_off_date" />

    <TextView
        android:id="@+id/payOffDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dollar_sign"
        android:textSize="20sp" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>